# RecEngine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  mlflow.db  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yaml  ci.yaml  ci.yml  ct.yaml  ct.yml
data/logs/: feedback.jsonl  predictions.jsonl
docs/: USAGE.md  WEEK8_SUMMARY.md  linkedin_posts.md  model_a_card.md  model_b_card.md  model_c_card.md
docs/adr/: 001-temporal-split.md  002-deterministic-ab-assignment.md  003-shadow-canary-ab-progression.md  004-two-stage-retrieval-ranking.md  005-evidently-for-monitoring.md  006-automated-retraining.md
src/: config.py
src/dashboard/: app.py
src/data/: pipeline.py  validation.py
src/models/: collaborative.py  ctr.py  features.py  registry.py  semantic.py
src/monitoring/: alerts.py  drift.py  metrics.py
src/serving/: app.py  middleware.py  router.py  schemas.py
src/training/: evaluate.py  promote.py  train.py
tests/: test_api.py  test_ctr.py  test_data.py  test_models.py  test_monitoring.py  test_promotion.py  test_retraining.py  test_routing.py
