[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "recengine"
version = "0.1.0"
description = "A recommendation engine project"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    # "scikit-surprise>=1.1",  # pas compatible Python 3.14 encore
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "xgboost>=2.0",
    "shap>=0.43",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mlflow>=2.10",
    "evidently>=0.4",
    "prometheus-client>=0.20",
    "streamlit>=1.32",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "dvc>=3.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
